data/theme/gnome-shell-sass/_common.scss
/* ... */
.modal-dialog-linked-button, %bubble_button {
  border-right-width: 1px;
  @include button(normal, $c:$bg_color, $tc:$fg_color);
  &:insensitive { @include button(insensitive, $c:$bg_color, $tc:$fg_color); }
  &:hover { @include button(hover, $c:$_hover_bg_color, $tc:$fg_color); }
  &:focus { @include button(focus, $c:$_hover_bg_color, $tc:$fg_color); }
  &:active { @include button(active, $c:$_active_bg_color, $tc:$fg_color); }
  padding: 12px;
  border-top: 1px solid $_bubble_borders_color;

  &:first-child {
    border-radius: 0px 0px 0px $modal_radius;
  }
  &:last-child {
    border-right-width: 0px;
    border-radius: 0px 0px $modal_radius 0px;
  }
  &:first-child:last-child {
    border-right-width: 0px;
    border-radius: 0px 0px $modal_radius $modal_radius;
  }
}

/* Entries */
StEntry {
  border-radius: $button_radius;
  padding: 4px;
  border-width: 1px;
  color: $fg_color;
  @include entry(normal);
  //&:hover { @include entry(hover);}
  &:focus { @include entry(focus,$fc:transparentize($fg_color,0.5));}
  &:insensitive { @include entry(insensitive);}
  selection-background-color: $selected_bg_color;
  selected-color: $selected_fg_color;
  StIcon.capslock-warning {
    icon-size: 16px;
    warning-color: $warning_color;
    padding: 0 4px;
  }
}


/* Scrollbars */

StScrollView {
  &.vfade { -st-vfade-offset: 68px; }
  &.hfade { -st-hfade-offset: 68px; }
}

StScrollBar {
  padding: 0;

  StScrollView & {
    min-width: 14px;
    min-height: 14px;
  }

  StBin#trough {
    border-radius: 0;
    background-color: transparent;
  }

  StButton#vhandle, StButton#hhandle {
    border-radius: 8px;
    background-color: mix($fg_color, $bg_color, 60%);
    //border: 3px solid transparent; //would be nice to margin or at least to transparent
    margin: 3px;
    &:hover { background-color: mix($fg_color, $bg_color, 80%); }
    &:active { background-color: $selected_bg_color; }
  }
}

/* Slider */

.slider {
  height: 1em;
  -barlevel-height: 0.3em;
  -barlevel-background-color: transparentize($fg_color, 0.9); //background of the trough
  -barlevel-border-color: $borders_color; //trough border color
  -barlevel-active-background-color: $selected_bg_color; //active trough fill
  -barlevel-active-border-color: $selected_borders_color; //active trough border
  -barlevel-overdrive-color: $destructive_color;
  -barlevel-overdrive-border-color: darken($destructive_color,10%);
  -barlevel-overdrive-separator-width: 0.2em;
  -barlevel-border-width: 1px;
  -slider-handle-radius: 8px;
  -slider-handle-border-width: 1px;
  -slider-handle-border-color: $borders_color;
  color: if($variant == 'light', lighten($bg_color, 10%), darken($bg_color,4%));
  &:hover { color: $_hover_bg_color; }
  &:active { color: $_active_bg_color; }
}
/* ... */

